# zephyr-debugging

./: README.md  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/boards/: nice_nano_v2.overlay  sparkfun_pro_micro_rp2040.overlay
app/src/: main.c
boards/nicekeyboards/nice_nano/: Kconfig  Kconfig.nice_nano_v2  board.cmake  board.yml  nice_nano.dtsi  nice_nano_v2.dts  nice_nano_v2_defconfig
zephyr/: module.yml
